--- a/backup/2024-11-22.md
+++ b/backup/2024-11-22.md
@@ -9,3 +9,5 @@ exit
 2. 装OnlyOffice Desktop时发现有一个叫`ttf-mscorefonts-installer`的依赖死活装不上。
 分析后发现，似乎是能用apt把包下下来，但是dpkg解包时似乎会运行一个脚本，这个脚本从sourceforge上把字体下载下来，但是`sudo dpkg`不会走本终端通过本用户设置的`http_proxy`，所以下载不下来。
 因此解决方法也很简单了，直接`su -`，然后在root shell里export http_proxy，然后`dpkg --configure -a`就好了
+
+3. 感觉Java好逆天啊。。。各种莫名其妙的配置（虽然转念一想，其实CMake更逆天才对。。。）
