--- a/backup/2024年第49周力扣打卡.md
+++ b/backup/2024年第49周力扣打卡.md
@@ -1,5 +1,5 @@
 # 周一 
-n皇后II https://leetcode.cn/problems/n-queens-ii/
+[n皇后II](https://leetcode.cn/problems/n-queens-ii/)
 好久不写了，脑袋木掉了。
 总之就是回溯+状态压缩（位运算），用三个比特集合存储横行、左斜行、右斜行的情况，然后按列扫描并回溯就好。
 用到了[std::bitset](https://zh.cppreference.com/w/cpp/utility/bitset)，这个感觉还算有点用。
@@ -34,6 +34,19 @@ public:
     int totalNQueens(int n) {
         queen(0, n);
         return cnt;
+    }
+};
+```
+
+# 周二
+感冒了，正好出了一道eazy，签个到算了
+[3274. 检查棋盘方格颜色是否相同](https://leetcode.cn/problems/check-if-two-chessboard-squares-have-the-same-color/)
+```cpp
+class Solution {
+public:
+    bool checkTwoChessboards(string coordinate1, string coordinate2) {
+        return !((coordinate1[0] - 'a' + coordinate1[1] - '1' 
+                + coordinate2[0] - 'a' + coordinate2[1] - '1') % 2);
     }
 };
 ```
