🎉auto update by Gmeek action

--- a/backup/2024年第49周力扣打卡.md
+++ b/backup/2024年第49周力扣打卡.md
@@ -50,7 +50,7 @@ public:
     }
 };
 ```
-
+# 周三
 [2056. 棋盘上有效移动组合的数目](https://leetcode.cn/problems/number-of-valid-move-combinations-on-chessboard/)
 hard，头痛牙痛，脑袋蒙蒙，知道要用回溯/搜索，但就是搞不对，感觉是对数据结构的组织不太好。下面是别人的解法：
 ```cpp
@@ -139,6 +139,60 @@ public:
         };
         dfs(dfs, 0);
         return ans;
+    }
+};
+```
+
+# 周四
+[3001. 捕获黑皇后需要的最少移动次数](https://leetcode.cn/problems/minimum-moves-to-capture-the-queen/description/)
+模拟题，搞对就行，没啥特别的，但要注意浮点数精度
+```cpp
+class Solution {
+public:
+    int minMovesToCaptureTheQueen(int a, int b, int c, int d, int e, int f) {
+        if((c + d + e + f) % 2 == 1){
+            //cout << "白色象和黑皇后不在同一种颜色的格子里，只能使用车来捕获\n";
+            if(a == e || b == f){
+                //cout << "车和皇后在同一行/同一列\n";
+                if(a == c && a == e && (d - b) * (d - f) < 0){
+                    //cout << "象在车和皇后中间\n";
+                    return 2;
+                }else if(b == d && b == f && (c - a) * (c - e) < 0){
+                    //cout << "象在车和皇后中间\n";
+                    return 2;
+                }
+                return 1;
+            }
+            //cout << "不在同一行/同一列\n";
+            return 2;
+        }
+        // 可能是车，可能是象
+        if(a == e || b == f){
+            //cout << "车和皇后在同一行/同一列\n";
+            if(a == c && a == e && (d - b) * (d - f) < 0){
+                //cout << "象在车和皇后中间\n";
+                return 2;
+            }else if(b == d && b == f && (c - a) * (c - e) < 0){
+                //cout << "象在车和皇后中间\n";
+                return 2;
+            }
+            return 1;
+        }
+        if(float k = e == c ? 0 : float(f - d) / (e - c);
+                abs(abs(k) - 1) < 0.0001){
+            //cout << "象和皇后在同一个斜线\n";
+            float k1 = float(f - b) / (e - a);
+            if(abs(k - k1) < 0.0001){
+                //cout << "斜率相同\n";
+                if((b - d) * (b - f) < 0){
+                    //cout << "车在象和皇后中间\n";
+                    return 2;
+                }
+            }
+            return 1;
+        }
+        //cout << "普通情况\n";
+        return 2;
     }
 };
 ```
