--- a/backup/2024年第50周力扣打卡.md
+++ b/backup/2024年第50周力扣打卡.md
@@ -9,3 +9,36 @@ public:
     }
 };
 ```
+
+# 周二
+[935. 骑士拨号器](https://leetcode.cn/problems/knight-dialer/)
+dp，mid
+```cpp
+class Solution {
+    static constexpr int mod = 1e9 + 7;
+public:
+    int knightDialer(int n) {
+        vector<vector<int>> moves = {
+            {4, 6},                   //   0
+            {6, 8},  {7, 9},  {4, 8},   // 1 2 3
+            {3, 9, 0}, {}, {1, 7, 0}, // 4 5 6
+            {2, 6},  {1, 3},  {2, 4}    // 7 8 9
+        };
+        vector<vector<int>> d{vector<int>(10, 0), vector<int>(10, 1)};
+        for (int i = 2; i <= n; i++) {
+            int x = i & 1;
+            for (int j = 0; j < 10; j++) {
+                d[x][j] = 0;
+                for (int k : moves[j]) {
+                    d[x][j] = (d[x][j] + d[x ^ 1][k]) % mod;
+                }
+            }
+        }
+        int res = 0;
+        for (auto x : d[n % 2]) {
+            res = (res + x) % mod;
+        }
+        return res;
+    }
+};
+```
