🎉auto update by Gmeek action

--- a/backup/2024年第50周力扣打卡.md
+++ b/backup/2024年第50周力扣打卡.md
@@ -42,3 +42,16 @@ public:
     }
 };
 ```
+
+# 周三
+[2717. 半有序排列](https://leetcode.cn/problems/semi-ordered-permutation)
+签个到，记一下这个`std::minmax_element`
+```cpp
+class Solution {
+public:
+    int semiOrderedPermutation(vector<int>& nums) {
+        auto [first, last] = minmax_element(nums.begin(), nums.end());
+        return first + nums.size() - 1 - last - (last < first);
+    }
+};
+```
