🎉auto update by Gmeek action

--- a/backup/2024年第50周力扣打卡.md
+++ b/backup/2024年第50周力扣打卡.md
@@ -55,3 +55,30 @@ public:
     }
 };
 ```
+
+# 周四
+[2931. 购买物品的最大开销](https://leetcode.cn/problems/maximum-spending-after-buying-items/)
+hard，但感觉难度只是普通mid，吐槽一下`std::priority_queue`的api好丑啊。。。
+```cpp
+class Solution {
+public:
+        using ll = long long;
+    long long maxSpending(vector<vector<int>>& values) {
+        priority_queue<array<ll, 2>, std::vector<array<ll, 2>>, 
+                                  greater<array<ll, 2>>>q;
+        ll m = values.size(), n = values[0].size();
+        vector<ll>idxs(m, n - 1);
+        for(ll i = 0; i < m; i++){
+            q.push({values[i][idxs[i]], i});
+        }
+        ll ans = 0, d = 1;
+        while(!q.empty()){
+            auto [value, i] = q.top();
+            ans += d * value;
+            d++, q.pop() , idxs[i]--;
+            if(idxs[i] >= 0){ q.push({values[i][idxs[i]], i}); }
+        }
+        return ans;
+    }
+};
+```
