🎉auto update by Gmeek action

--- a/backup/12月计划.md
+++ b/backup/12月计划.md
@@ -6,7 +6,7 @@
 
 ### 课程
 - [ ] 把表达与交流的考勤补一下
-- [ ] 把欠的作业补一下
+- [x] 把欠的作业补一下
 
 ### 自学
 - [ ] 把Java语法全部过完，搞个SpringBoot项目（开个头就行）
@@ -17,5 +17,5 @@
 
 ### 其他
 - [x] 把三方的手续搞完
-- [ ] 等华子开奖，看看能给多少
+- [x] 等华子开奖，看看能给多少
 
