🎉auto update by Gmeek action

--- a/backup/2024年第50周力扣打卡.md
+++ b/backup/2024年第50周力扣打卡.md
@@ -82,3 +82,27 @@ public:
     }
 };
 ```
+
+# 周五
+[3264. K 次乘运算后的最终数组 I](https://leetcode.cn/problems/final-array-state-after-k-multiplication-operations-i/)
+感觉`std::make_heap`比`std::priority_queue`好用
+```cpp
+class Solution {
+public:
+    vector<int> getFinalState(vector<int>& nums, int k, int multiplier) {
+        if(multiplier == 1){ return nums; }
+        int len  = nums.size();
+        vector<int>h(len);
+        iota(h.begin(), h.end(), 0);
+        auto cmp = [&nums](int a, int b){
+            return nums[a] > nums[b] || (nums[a] == nums[b] && a > b);
+        };
+        for (auto _{k}; _--;) {
+            make_heap(h.begin(), h.end(), cmp);
+            pop_heap(h.begin(), h.end(), cmp);
+            nums[h[len - 1]] *= multiplier;
+        }
+        return nums;
+    }
+};
+```
